# Projeto-Compilador

./: .gitignore  CMakeLists.txt  Makefile  README.md  arvore-sort-correta.txt  compilador  compiler  lexer.l  output.txt  parser.y  sort.txt  tab.c  test.txt
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  main
Estudos/: Introducao.txt  arqTeste.c  dfa.c  fgets.c  regex.c
Include/: globals.h  parse.h  parser.h  scan.h
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  main
Src/: Makefile  compilador  entrada.txt  gcd.txt  lex.yy.c  lexer  lexer copy.l  lexer.l  main.c  out.txt  parser.tab.c  parser.tab.h  parser.y  utils.c
Src/parser/: lex.yy.c  lexer.l  main.c  parser.tab.c  parser.tab.h  parser.y
Src/test esta ruim/: compilador  entrada.txt  gcd.txt  lex.yy.c  lexer.l  parser.output  parser.tab.c  parser.tab.h  parser.y  utils.c
Src/varredura/: exec  lex.yy.c  lexerPrimeiro  lexerPrimeiro.l  main.l  teste1.c
include/: assembler.h  binario.h  codeGen.h  globals.h  label.h  memoria.h  parser.h  reg.h  semantic.h  syntax_tree.h  tab.h  util.h
parser/: globals.h  parser.y  util.c
relatorios/: RF_Compiladores.tex  main.tex
relatorios/requisitos/: req.txt
src/: assembler.c  assembler_complete.c  binario.c  codeGen.c  funcoes_assembly.c  label.c  lexer.l  main.c  memory.c  parser.y  reg.c  semantic.c  tab.c  tree.c  util.c
src/semantic/: tab.c
teste/: Makefile  compilador  gcd.txt  lex.yy.c  lexer.l  parser.output  parser.tab.c  parser.y
tests/: basic.cm  media.cm  simple.cm  sort.cm  sort.txt  sort2.cm  testeProf.cm  teste_descarte.cm
(+56 files in other folders)
